@@ -12,12 +12,9 @@ This application demonstrates how NEBA can be used to model resources in Sling a
 A ready-to-use web application. It has purely been designed to demonstrate NEBA features.
  
 ## How to run this application
-1. If you don't have a Sling instance to experiment with, download the Sling 8 Standalone Application from the [official download page](https://sling.apache.org/downloads.cgi). Then, run the standalone jar using JDK 8 - this will install and start sling, e.g. with debugging on port 30303 using 
-   `java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=30303 -Xmx1700m -XX:MaxPermSize=256m -jar`. 
-   Handy hint: Tail the error.log in sling/logs - this is the best way to see what is happening under the hood.
-2. Install the NEBA Sling delivery bundle from [http://neba.io/download.html](http://neba.io/download.html), install and activate it.  
-3. Install the thirdparty bundles used by the sample application. For convenience, they are placed in the folder "thirdparties". 
-4. Run `mvn install sling:install` - this will install the application to a sling instance at localhost:8080
+1. Build the Neba Sample bundle in the root directory with `mvn install`
+2. Build the Neba Sample Launchpad in the launchpad directory with `mvn install`
+3. Start your Neba Sample Launchpad in the launchpad directory with `mvn slingstart:start -Dlaunchpad.keep.running=true` (Can be stopped again with pressing Ctrl-C)
 5. Open [http://localhost:8080/content/neba-sample.html](http://localhost:8080/content/neba-sample.html).
 6. You may login with any sling user, e.g. using admin/admin for the default administrative account.
 7. To configure the SMTP settings for the contact form, see /system/console/configMgr, "io.neba.sample.mail" and "NEBA sample project contact email sender".
